--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: The UPYUN Engineering Blog
+title: UPYUN Systems Engineering Blog
 email: support@upyun.com
 description: > # this means to ignore newlines until "baseurl:"
-  Information from UPYUN's engineering team about our technology, tools and events.
+  Information from UPYUN's systems engineering team about our technology, tools and events.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://io.upyun.com" # the base hostname & protocol for your site
 github_username:  upyun
